--- a/config/iskra.conf
+++ b/config/iskra.conf
@@ -4,7 +4,7 @@ CONFIG_ZMK_BLE=y
 
 # Aggressive power saving for 2000mAh battery
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000      # 15 min → deep sleep
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000      # 15 min → deep sleep
 # CONFIG_ZMK_IDLE_TIMEOUT=60000             # 1 min → idle (BLE disconnect)
 
 # NKRO over USB (all 9 keys simultaneously)
