--- a/boards/shields/iskra/iskra.zmk.yml
+++ b/boards/shields/iskra/iskra.zmk.yml
@@ -7,6 +7,6 @@ features:
 matrix:
   rows: 3
   cols: 4
-  diode_direction: COL2ROW
+  diode_direction: ROW2COL
 microcontroller: nrf52840
 board: nice_nano_v2
