Comment out power saving and USB settings
Comment out various configuration options in iskra.conf

--- a/config/iskra.conf
+++ b/config/iskra.conf
@@ -3,15 +3,15 @@ CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
 
 # Aggressive power saving for 2000mAh battery
-CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_SLEEP=y
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000      # 15 min → deep sleep
 # CONFIG_ZMK_IDLE_TIMEOUT=60000             # 1 min → idle (BLE disconnect)
 
 # NKRO over USB (all 9 keys simultaneously)
-CONFIG_USB_HID_BOOT_PROTOCOL=n
+#CONFIG_USB_HID_BOOT_PROTOCOL=n
 
 # Battery level reporting
-CONFIG_ZMK_BATTERY_REPORTING=y
+#CONFIG_ZMK_BATTERY_REPORTING=y
 
 # BLE security
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+#CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
