Revert "Comment out power saving and USB settings"
This reverts commit e7bdff10b70e1528b375b01a6d10c7d0f407c2f3.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 .zmk/
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/prettier.xml
+.idea/vcs.xml
+.idea/zmk-config-iskra.iml
